# museum-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_1.md  IMPLEMENTATION_PLAN_PHASE_2.md  IMPLEMENTATION_PLAN_PHASE_3.md  IMPLEMENTATION_PLAN_PHASE_4.md  IMPLEMENTATION_PLAN_PHASE_5.md  IMPLEMENTATION_PLAN_PHASE_6.md  IMPLEMENTATION_STATUS.md  QUALITY.md  README.md  REVIEW.md  REVIEW_VALIDATION.md  alembic.ini  decisions.md  pyproject.toml  pyrightconfig.json  uv.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docker/: Dockerfile.api  Dockerfile.notebook  docker-compose.yml
docs/: DIAGRAMS.md  PROJECT.md  homework.md
docs/diagrams/: class_diagram.mmd  dataflow.mmd  refresh_state_machine.mmd  sequence_refresh.mmd  sequence_regression.mmd
notebook/: regression_analysis.ipynb
prototype/: README.md  city_population_history.csv  get_city_pop.py  get_museums_data.py  highly_visited_museums.csv
scripts/: demo.sh  generate_diagrams.py
src/museums/: __init__.py  config.py  dependencies.py  exception_handlers.py  exceptions.py  http_client.py  logging_config.py  main.py  mcp_server.py
src/museums/clients/: __init__.py  list_page_parser.py  mediawiki_client.py  population_parsing.py  wikidata_client.py
src/museums/enums/: __init__.py  error_code.py  external_source.py  log_level.py
src/museums/models/: __init__.py  base.py  city.py  museum.py  population_record.py  refresh_state.py  visitor_record.py
src/museums/repositories/: __init__.py  city_repository.py  health_repository.py  museum_repository.py  population_record_repository.py  refresh_state_repository.py  visitor_record_repository.py
src/museums/routers/: __init__.py  cities.py  harmonized.py  health.py  museums.py  refresh.py  regression.py
src/museums/schemas/: __init__.py  city.py  common.py  harmonized.py  museum.py  refresh.py  regression.py
src/museums/services/: __init__.py  city_query_service.py  harmonization_service.py  health_service.py  museum_query_service.py  regression_service.py
src/museums/workflows/: __init__.py  fallback_enrichment.py  ingestion_workflow.py
tests/: conftest.py  factories.py  test_config.py  test_exceptions.py  test_http_client.py  test_integration_live_ingestion.py  test_logging_config.py
tests/fixtures/: wikidata_city_populations.json  wikidata_museum_enrichment.json  wikitext_fixture.txt
tests/test_clients/: test_list_page_parser.py  test_mediawiki_client.py  test_wikidata_client.py
tests/test_repositories/: test_city_repository.py  test_museum_repository.py  test_population_record_repository.py  test_refresh_state_repository.py  test_visitor_record_repository.py
tests/test_routers/: test_cities.py  test_harmonized.py  test_health.py  test_museums.py  test_refresh.py  test_regression.py
tests/test_schemas/: test_museum_schema.py  test_refresh_schema.py
tests/test_services/: test_city_query_service.py  test_harmonization_service.py  test_museum_query_service.py  test_regression_service.py
tests/test_workflows/: conftest.py  test_ingestion_workflow.py
tools/: vulture_whitelist.py
tools/pre_commit_checks/: _base.py  check_file_length.py  check_no_httpexception_outside_handlers.py  check_no_sqlalchemy_in_routers.py  check_no_sync_http_in_src.py
